--- a/lib/etc/code/C/templates/template_R.jinja
+++ b/lib/etc/code/C/templates/template_R.jinja
@@ -1,6 +1,6 @@
 {#this template use the func dictionary (extrated from functions.json) and the mappers_X.json dict as input #}
 {%- if  conf[func['name']] is defined and  conf[func['name']]['Runtime'] is defined and conf[func['name']]['Runtime']['C'] is defined and conf[func['name']]['Runtime']['C']['generated'] == "False" -%} 
-    {% if  conf[func['name']]['Runtime']['C']['path'] is defined %}
+    {% if  conf[func['name']]['Runtime']['C']['file'] is defined %}
     {%-  include conf[func['name']]['Runtime']['C']['file'] %}
     {% endif %}
 {%-  else-%} 
